# lacemodelica

./: .gitignore  ALGORITHM_TO_SUBGRAPH_IMPLEMENTATION.md  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
StructuralParameters_fmu/: modelDescription.xml
Testing/Temporary/: CTestCostData.txt  LastTest.log.tmp60471  LastTest.log.tmp84196
docs/: grammar-test-coverage.md
grammar/: BaseModelica.g4  LICENSE
include/: EquationGenerator.h  ExpressionConverter.h  FMUGenerator.h  GraphBuilder.h  ModelInfo.h  ModelInfoExtractor.h  ONNXGenerator.h  ONNXHelpers.hpp  ONNXOptimizer.h  ParseTreeNavigator.h  Utils.hpp  lacemodelica.h
src/: EquationGenerator.cpp  ExpressionConverter.cpp  FMUGenerator.cpp  GraphBuilder.cpp  ModelInfoExtractor.cpp  ONNXGenerator.cpp  ONNXHelpers.cpp  ONNXOptimizer.cpp  ParseTreeNavigator.cpp  lacemodelica_c.cpp  main.cpp
test/: run_generate_test.py  test_fmu_import.py  test_fmu_import_no_structural.py  test_onnx_runtime.py  validate_onnx_model.py
test/testfiles/: AlgorithmForLoop.bmo  AlgorithmForLoopArray.bmo  AlgorithmForLoopCarry.bmo  AlgorithmForLoopNested.bmo  AlgorithmFunctionCall.bmo  AlgorithmIfStatement.bmo  AlgorithmIfStatementElseIf.bmo  AlgorithmIfStatementNested.bmo  AlgorithmIfStatementNoElse.bmo  AlgorithmIfStatementSimple.bmo  AlgorithmIfStatementUnion.bmo  AlgorithmMultiOutput.bmo  AlgorithmScatter.bmo  AlgorithmWhileLoop.bmo  ArithmeticOps.bmo  ArrayComprehension.bmo  ArrayComprehension2D.bmo  ArraySlice.bmo  ArraySlice2D.bmo  Assert.bmo  CauerLowPassAnalog.bmo  CauerLowPassAnalogSine.bmo  CauerLowPassAnalogSineNoAssert.bmo  ChuaCircuitNoAssert.bmo  Comparisons.bmo  ComplexInit.bmo  CustomTypes.bmo  DerExpression.bmo  DerVariable.bmo  ElementWiseProduct.bmo  Enumeration.bmo  Experiment.bmo  ExternalFunction.bmo  ForLoop.bmo  ForLoopComplex.bmo  ForLoopMatrix.bmo  ForLoopNested.bmo  ForLoopTriple.bmo  FunctionInputOutput.bmo  GlobalConst.bmo  (+30 more)
test/testfiles/units/: IDENT_01.bmo  IDENT_02.bmo  LINE_COMMENT_01.bmo  ML_COMMENT_01.bmo  STRING_01.bmo  UNSIGNED_INTEGER_01.bmo  UNSIGNED_NUMBER_01.bmo  addOperator_01.bmo  annotationComment_01.bmo  argumentList_01.bmo  arithmeticExpression_01.bmo  arithmeticExpression_02.bmo  arrayArguments_01.bmo  arraySubscripts_01.bmo  baseModelica01.bmo  basePartition_01.bmo  basePrefix_01.bmo  basePrefix_02.bmo  classDefinition01.bmo  classDefinition02.bmo  classDefinition03.bmo  classModification_01.bmo  classPrefixes_01.bmo  classPrefixes_02.bmo  classPrefixes_03.bmo  clockClause_01.bmo  comment_01.bmo  componentClause_01.bmo  componentClause_02.bmo  componentDeclaration_01.bmo  componentList_01.bmo  componentReference_01.bmo  composition_01.bmo  declaration_01.bmo  declaration_02.bmo  decoration_01.bmo  derClassSpecifier_01.bmo  elementModification_01.bmo  enumList_01.bmo  enumerationLiteral_01.bmo  (+66 more)
